[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://high_tech_hop_get_out.gd" type="Script" id=2]

[node name="high_tech_hop_get_out" type="Sprite"]
scale = Vector2( 0.640625, 0.21875 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="fire_rate" type="Timer" parent="."]
one_shot = true

[node name="grenade_spawn" type="Position2D" parent="."]
position = Vector2( 38.7879, 0 )

[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]
